css/style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;1,200&display=swap');

body {
    background: black;
    color: white;
    font-family: 'Ubuntu', sans-serif;
}

.main-container {
    margin: 1em;
}

.train {
    display: flex;
    width: 100%;

}

.train .train-vasby {
    min-height: 250px;
    background: url('/img/train.png') rgba(0, 0, 0, 0.85);
    background-size: 50%;
    background-blend-mode: darken;
    background-repeat: no-repeat;
    background-position: center center;

    display: flex;
    flex-wrap:wrap;
    justify-content: space-between;    
}

h3.train-direction-header {
    align-self: flex-end;
    margin: 0 auto;
    width: 100%;
    text-align: center;
}

.train-seg {
    flex-direction: column;
}

.row, .row>* {
    display: flex;
    flex-wrap: nowrap;
}

.row {
    width: 100%;
    flex-wrap: nowrap;
}

.seg-4 {
    width: 25%;
}

.seg-3 {
    width: 30%;
}

.seg-2 {
    width: 50%;
}
.row .train .train-from-header {
    margin-bottom: 0.4em;
}
.row h1, .row h2, .row h3 {
    margin: 0;
}

.train .train-vasby .train-seg {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: repeat(2, 5rem 2rem);
    max-height: 250px;
    align-items: end;
    justify-items: center;
}
.train-data {
    font-size: clamp(1rem, 2rem, 2.5rem); 
    text-align: center;
}
.train-label {
    text-transform: uppercase;
    
}
.currentError {
    display: none;
}

.button {
    display: inline-block;
    padding: 0.5em 0.75em;
    background: orange;
    font-weight: bold;
    border-radius: 5px;
    color:rgb(250, 241, 224);
    user-select: none;
}

.canceled {
    background: yellow;
}

.delay {
    text-decoration:line-through;
    opacity: 0.6;
    font-size: 75%;
    margin-bottom: 0.25em;
    display: inline-block;
}

.trainDepNew {
    display: none;
    animation: notice-me;
    animation-duration: 5000ms;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    animation-fill-mode: forwards;
    border-radius: 0.25em;
    padding: 0.125em;
}

@keyframes notice-me {
    
    30% {
        background: white;
        color: black;
    }
}

